src/src-scss/scss/blocks/card.scss
.card {
  $c: &;

  @include makeColumn;

  max-width: 320px;
  width: 100%;
  min-height: 515px;

  position: relative;

  color: #000;

  &__checker {
    display: none;

    &:checked {
      & + #{$c}__inner {

        #{$c}__body,#{$c}__footer,#{$c}__header, #{$c}__face:before {
          border-color: $rose;
        }

       #{$c}__weight {
         background-color: $rose;
       }

        #{$c}__face {
          z-index: 1;

          &:hover {
            z-index: 20;
          }
        }
      }

      & ~ #{$c}__description {
        display: block;
      }

      & ~ #{$c}__appeal {
        display: none;
      }
    }

    &:disabled {
      & + #{$c}__inner {

        #{$c}__body,#{$c}__footer,#{$c}__header, #{$c}__face:before {
          border-color: $beton;
          background-color: $snow;
        }

        #{$c}__weight {
          background-color: $beton;
        }

        #{$c}__img, #{$c}__header > *, #{$c}__body > * {
          opacity: .5;
        }
      }

      & ~ #{$c}__description, & ~ #{$c}__appeal {
        display: none;
      }

      & ~ #{$c}__over {
        display: block;
      }
    }
  }

  &__inner {
    @include makeColumn;
    flex-shrink: 0;
    position: relative;

    max-width: 320px;
    width: 100%;

    border-radius: 12px;

    transition: background-color $quick-transition-time
  }

  &__face {
    @include makeColumn;

    position: relative;
    z-index: 10;

    overflow: hidden;

    border-radius: 8px;

    cursor: pointer;


    &:before {
      @include pseudo-elem;
      z-index: 0;
      left: -2px;
      bottom: calc(100% - 45px);

      width: 45px;
      height: 66px;

      background-color: #fff;

      border-left: 4px solid $wave;

      transform: rotate(47deg);
      transform-origin: 0 100%;
    }
  }

  &__header, &__body  {
    display: block;
  }

  &__header, &__body  {
    position: relative;
    z-index: 1;

    background-color: #fff;
  }

  &__header {
    flex-grow: 0;
    min-height: 45px;

    margin-left: 47px;

    border-top: 4px solid $wave;
    border-right: 4px solid $wave;
    border-top-right-radius: 10px;
  }

  &__body {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    flex-grow: 1;

    overflow: hidden;

    border-left: 4px solid $wave;
    border-right: 4px solid $wave;
    border-bottom: 4px solid $wave;

    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
  }

  &__title-area {
    margin-top: -25px;
  }

  &__title-area, &__text-area {
    display: block;

    padding-left: 47px;
    padding-right: 47px;
  }

  &__text-area {
    flex-grow: 1;

    padding-top: 15px;
  }

  &__title {
    display: block;


    font-weight: bold;

    @include for-phone-up {
      font-size: between(32px, 48px, $phone-from, $desktop);
      line-height: between(36px, 56px, $phone-from, $desktop);
    }

    @include for-desktop-up {
      font-size: 48px;
      line-height: 56px;
    }

    &--micro {
      margin-bottom: 5px;

      font-size: 16px;
      font-weight: 400;
      line-height: 19px;
    }

    &--weak {
      color: $clay;
    }

    &--small {
      font-size: 24px;
      line-height: 28px;
    }
  }

  &__text {
    display: block;

    font-size: 14px;
    line-height: 16px;
    color: $clay;
  }

  &__notice {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 5;

    width: 100%;
    height: 100%;

    padding: 17px 51px;

    color: $rose;

    opacity: 0;

    cursor: pointer;

    &:hover {
      opacity: 1;

      & > * {
        background-color: #fff;
      }
    }
  }

  &__footer {
    display: block;
    width: 100%;
  }

  &__img-container {
    position: relative;

    display: block;
    height: 270px;
    width: 100%;
  }

  &__img {
    position: absolute;
    left: -27px;

    display: block;
  }

  &__weight {
    position: absolute;
    z-index: 1;
    right: 13px;
    bottom: 13px;

    transition: background-color $quick-transition-time;
  }

  &__comment {
    flex-shrink: 1;

    padding-top: 7px;
    padding-bottom: 7px;

    font-size: 13px;
    color: #fff;
    text-align: center;

    @include for-phone-up {
      min-height: 56px;
    }

    @include for-tablet-portrait-up {
      min-height: 0;
    }
  }

  &__description, &__over {
    display: none;
  }

  &__over {
    color: $lemon;
  }
}

